# originman

./: README.md  requirements.txt
config/: gestureDet_8x21.hbm  handLMKs.hbm
driver/: ActionGroupDict.py  (+2 more)
driver/pre_rdk_install/: CMakeLists.txt  README.md  package.xml
driver/pre_rdk_install/face_age_detection/share/face_age_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/face_age_detection/share/face_age_detection/cmake/: face_age_detectionConfig.cmake
driver/pre_rdk_install/face_age_detection/share/face_age_detection/config/: faceAge.hbm  face_age_bayes_e_20241029_v0.0.1.hbm
driver/pre_rdk_install/face_age_detection/share/face_age_detection/launch/: age_gesture_fusion.launch.py  body_det_face_age_det.launch.py  face_age_det_node.launch.py
driver/pre_rdk_install/face_landmarks_detection/share/face_landmarks_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/face_landmarks_detection/share/face_landmarks_detection/cmake/: face_landmarks_detectionConfig.cmake
driver/pre_rdk_install/face_landmarks_detection/share/face_landmarks_detection/config/: faceLandmark106pts.hbm
driver/pre_rdk_install/face_landmarks_detection/share/face_landmarks_detection/launch/: body_det_face_landmarks_det.launch.py  face_landmarks_det_node.launch.py
driver/pre_rdk_install/hand_gesture_detection/lib/hand_gesture_detection/config/: gestureDet_32x21.hbm
driver/pre_rdk_install/hand_gesture_detection/share/hand_gesture_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/hand_gesture_detection/share/hand_gesture_detection/cmake/: hand_gesture_detectionConfig.cmake
driver/pre_rdk_install/hand_gesture_detection/share/hand_gesture_detection/launch/: hand_gesture_detection.launch.py  hand_gesture_fusion.launch.py  hand_gesture_fusion_img_fb.launch.py
driver/pre_rdk_install/hand_lmk_detection/share/hand_lmk_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/hand_lmk_detection/share/hand_lmk_detection/cmake/: hand_lmk_detectionConfig.cmake
driver/pre_rdk_install/hand_lmk_detection/share/hand_lmk_detection/launch/: hand_lmk_detection.launch.py
driver/pre_rdk_install/tros_ai_fusion/lib/tros_ai_fusion/: tros_ai_fusion
driver/pre_rdk_install/tros_ai_fusion/share/tros_ai_fusion/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/tros_ai_fusion/share/tros_ai_fusion/cmake/: tros_ai_fusionConfig.cmake
driver/pre_rdk_install/tros_ai_fusion_msgs/share/tros_ai_fusion_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/tros_lowpass_filter/lib/tros_lowpass_filter/: tros_lowpass_filter
driver/pre_rdk_install/tros_lowpass_filter/share/tros_lowpass_filter/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver/pre_rdk_install/tros_perception_render/lib/tros_perception_render/: tros_perception_render
driver/pre_rdk_install/tros_perception_render/share/tros_perception_render/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
originman_action_imitation/: CMakeLists.txt  README.md  package.xml
originman_action_imitation/include/: action_imitation.hpp  order_interpreter.hpp
originman_action_imitation/launch/: action_imitation.launch.py
originman_action_imitation/src/: action_imitation.cpp  main.cpp  order_interpreter.cpp
originman_demo/: package.xml  setup.cfg  setup.py
originman_demo/originman_demo/: cmdvel_to_action_node.py  image_display_node.py  imu_print_node.py  oled_display_node.py  rgb_ring_node.py
(+144 files in other folders)
