<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>originman_action_imitation</name>
    <version>1.0.0</version>
    <description>Originman action imitation module</description>
    <maintainer email="liqiaolong@guyuehome.com">nuo.wu</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>ai_msgs</depend>
    <depend>python3</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>